# hackiitk

./: .coveragerc  .dockerignore  .gitignore  .gitlab-ci-extreme.yml  .gitlab-ci.yml  ANALYSIS_FRAMEWORK.md  CATALOG_EXPLANATION.md  CI_CD_SUCCESS_REPORT.md  CI_STATUS.md  CONSERVATIVE_GAP_DETECTION_FIX.md  DEEP_AUDIT_REPORT.md  DOCKER_GUIDE.md  Dockerfile  EXECUTIVE_FIX_SUMMARY.md  EXECUTIVE_SUMMARY.md  FINAL_FIX_SUMMARY.md  FINAL_STATUS.md  FINAL_SUMMARY.md  FIXES_SUMMARY.md  FIX_VALIDATION_REPORT.md  GAP_DETECTION_TEST_DOCUMENTATION.md  GAP_DETECTION_TEST_SUMMARY.md  GAP_TEST_INDEX.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_SUMMARY.md  LICENSE  PRODUCTION_READINESS_ASSESSMENT.md  PRODUCTION_STATUS.md  README.md  README_TESTING.md  RUN_THIS.md  SETUP_COMPLETE.md  SYSTEMATIC_ERRORS_FIXED.md  TASK_34_COMPLETION_REPORT.md  TESTING_FRAMEWORK_STATUS.md  TEST_STATUS.md  TEST_SUITE_STATUS.md  TODO.md  WATCH_TESTS_LIVE.md  WORK_REMAINING_SUMMARY.md  (+25 more)
.venv-test/: pyvenv.cfg
Claims/: req-spec.md
PPT/: 00_overview.md  01_project_summary.md  03_repo_walkthrough.md  04_architecture.md  05_how_it_works_end_to_end.md  06_setup_and_installation.md  08_how_to_use.md  10_data_flow.md  11_model_and_inference_flow.md  12_policy_gap_analysis_logic.md  13_offline_guarantees_and_boundaries.md  14_config_and_dependencies.md  15_security_privacy_and_risks.md  16_limitations_gaps_and_improvements.md  17_troubleshooting.md  18_demo_walkthrough.md
analysis/: __init__.py  cli.py  domain_mapper.py  gap_analysis_engine.py  llm_runtime.py  stage_a_detector.py  stage_b_reasoner.py
archive/: CHEAT_SHEET.md  CLI_COMPLETE.md  CLI_ENHANCEMENT_SUMMARY.md  CLI_FINAL_SUMMARY.md  CLI_PRODUCTION_READY.md  CLI_QUICK_REFERENCE.md  CLI_QUICK_START.md  CLI_RECOMMENDED_ENHANCEMENTS_COMPLETE.md  COMPLETE_SYSTEM_VALIDATION.md  CURRENT_STATUS.md  DO_THIS_NOW.txt  FINAL_ANSWER.md  FINAL_STATUS_REPORT.md  FINAL_SUMMARY.md  FINAL_VALIDATION_REPORT.md  HOW_TO_USE.md  INSTALL_CLI.md  INSTALL_COMMANDS.txt  INSTALL_MACOS.md  MACOS_QUICK_START.md  MACOS_SETUP_COMPLETE.md  NEXT_STEP.txt  PYTHON_VERSION_ISSUE.md  QUICK_START_DEMO.md  QUICK_START_PYTHON311.md  READY_TO_USE.md  REALISTIC_SOLUTION.md  SETUP_COMPLETE.md  SETUP_MAC_README.md  SIMPLE_START.md  START_HERE.md  START_HERE_MAC.md  SYSTEM_VALIDATION_COMPLETE.md  TASK_36_COMPLETION_REPORT.md  USE_THIS.txt  WHERE_WE_ARE.md  install_deps.sh  (+8 more)
cli/: main.py  (+6 more)
(+687 files in other folders)
